--- a/index.html
+++ b/index.html
@@ -85,16 +85,19 @@
                                 <p class="filter">Filter</p>
                                 <div class="price">
                                     <h2>Price</h2>
-                                </div>
+                                </div>                      
                                 <div class="double-slider-box">
                                     <div class="range-slider">
                                         <span class="slider-track"></span>
-                                        <input type="range" name="min_val" class="min-val" min="10" max="500" value="50" oninput="slideMin()">
-                                        <input type="range" name="max_val" class="max-val" min="10" max="500" value="200" oninput="slideMax()">
-                                        <div class="tooltip min-tooltip"></div>
-                                        <div class="tooltip max-tooltip">$200</div>
+                                        <input type="range" name="min_val" class="min-val" min="10" max="400" value="50" oninput="slideMin()">
+                                        <input type="range" name="max_val" class="max-val" min="10" max="400" value="200" oninput="slideMax()">
+                                        <div class="center_flex">
+                                            <div class="tooltip min-tooltip"></div>
+                                            <div class="tooltip max-tooltip"> $200</div>
+                                        </div>    
                                     </div>
                                 </div>
+                                <!--Range Slide Responsive-->
                                 <!--Filter CheckBox-->
                                 <div class="flowers-wrap">
                                     <form>
@@ -176,13 +179,15 @@
                                     <div class="price">
                                         <h2>Price</h2>
                                     </div>
-                                    <div class="double-slider-box">
-                                        <div class="range-slider">
-                                            <span class="slider-track"></span>
-                                            <input type="range" name="min_val" class="min-val" min="10" max="500" value="50" oninput="slideMin()">
-                                            <input type="range" name="max_val" class="max-val" min="10" max="500" value="200" oninput="slideMax()">
-                                            <div class="tooltip min-tooltip"></div>
-                                            <div class="tooltip max-tooltip">$200</div>
+                                    <div class="double-slider-box1">
+                                        <div class="range-slider1">
+                                            <span class="slider-track1"></span>
+                                            <input type="range" name="min_val1" class="min-val1" min="10" max="400" value="50" oninput="slideMin1()">
+                                            <input type="range" name="max_val1" class="max-val1" min="10" max="400" value="200" oninput="slideMax1()">
+                                            <div class="center_flex">
+                                                <div class="tooltip1 min-tooltip1"></div>
+                                                <div class="tooltip1 max-tooltip1"> $200</div>
+                                            </div>    
                                         </div>
                                     </div>
                                     <form>
